--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,8 @@ a:visited {
 
 /* Class selectors*/
 
+/* Header section styles*/
+
 .header {
     position: fixed;
     font-size: 24px;
@@ -39,6 +41,8 @@ a:visited {
         font-size: 14px;
     }
 }
+
+/* Navbar section styles*/
 
 .nav-bar {
    width: 96vw; 
@@ -58,6 +62,7 @@ a:visited {
     padding-left: 5%;
 }
 
+/* Welcome section styles*/
 
 .welcome-section {
     width: 98vw;
@@ -83,7 +88,7 @@ a:visited {
 
 }
 
-
+/* Main section styles*/
 
 .main-section {
     text-align: center;
@@ -94,6 +99,8 @@ a:visited {
     sans-serif;
     background-color: white;
 }
+
+/* About-me section styles*/
 
 .about-me-container {
     display: -webkit-flex;
@@ -113,6 +120,8 @@ a:visited {
         }
 }
 
+/* btn styles*/
+
 .btn-spec {
         border: none;
         color: #404040 !important;
@@ -130,19 +139,16 @@ a:visited {
     letter-spacing: 3px;
 }
 
+/* My projects section styles*/
 
 .my-projects-container {
     display: -webkit-flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
-    padding: 10%;
 }
 
-.my-workshop-container {
-    display: -webkit-flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 10%;
+.project-example {
+    margin-top: 5vh;
 }
 
 .my-projects-list {
@@ -151,13 +157,22 @@ a:visited {
     justify-content: space-around;
 }
 
+/* My workshop section styles*/
+
+.my-workshop-container {
+    display: -webkit-flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 10%;
+}
+
+/* Footer section styles*/
+
 .footer-container {
     display: -webkit-flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 10%;
-    /*background-image: url(https://images.unsplash.com/photo-1547628641-ec2098bb5812?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
-    background-size: cover;*/
     background-color: #404040;
 
 }
